[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/right_arrow.png" type="Texture" id=1]
[ext_resource path="res://Assets/left_arrow.png" type="Texture" id=2]
[ext_resource path="res://Assets/action_butt.png" type="Texture" id=3]
[ext_resource path="res://Assets/back_button.png" type="Texture" id=4]
[ext_resource path="res://Scenes/touch_buttons.gd" type="Script" id=5]

[node name="touch" type="Node2D"]
script = ExtResource( 5 )

[node name="right" type="TouchScreenButton" parent="."]
position = Vector2( 91.6462, 592.837 )
scale = Vector2( 1.54201, 1.54201 )
normal = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="right"]
position = Vector2( 26.657, 20.0081 )
texture = ExtResource( 2 )

[node name="left" type="TouchScreenButton" parent="."]
position = Vector2( 237.707, 594.269 )
scale = Vector2( 1.54201, 1.54201 )
normal = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="left"]
position = Vector2( 26.657, 20.0081 )
texture = ExtResource( 1 )

[node name="action" type="TouchScreenButton" parent="."]
position = Vector2( 1027.55, 603.313 )
scale = Vector2( 1.54201, 1.54201 )
normal = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="action"]
position = Vector2( 26.5283, 26.0615 )
scale = Vector2( 0.94333, 0.94333 )
texture = ExtResource( 3 )
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="released" from="right" to="." method="_on_right_released"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="released" from="left" to="." method="_on_left_released"]
[connection signal="pressed" from="action" to="." method="_on_action_pressed"]
[connection signal="released" from="action" to="." method="_on_action_released"]
